public/css/style-d.css
*,
*::after,
*::before{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --C-1: #FF00FF;
    --C-2: #00FFFF;
    --C-3: ;
    --C-4: ;
    --C-5: ;
    --C-6: ;
}
body {
    
    background:silver;
    background-size: cover;
    background-repeat: no-repeat; 
    width: 100%;
    height: 100vh;
    position: relative;
    
}
body.second-img {
    background-image: url("../images/game_play.gif");
}


body::before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, 0.7);
}

.capsule {
    width: 100%;
    margin: 100px auto;
    display: flex;
    justify-content: center;
}

@media only screen and (max-width: 780px){
    .capsule {
        flex-direction: column;
        align-items: center;
    }
}

.replay {
    width: 50px;
}

.content-info {
    width: 480px;
    height: 320px;
    margin: 15px;
    perspective: 1000px;
    border-radius: 5%;
}

.full-card {
    
    width: 100%;
    height: 100%;
    transform-style: preserve-3d;
    transition: all 500ms linear;
    border-radius: 5%;
    animation: fade-slideDown 1200ms;
}

.front {
    
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    background: wheat;
    border-radius: 5%;
    padding: 2%;
}

.back {
    
    overflow: hidden;
    z-index: -1;
    display: grid;
    transform: rotateY(180deg);
    box-sizing: border-box;
    border-radius: 5%;
    padding: 2%;
    box-shadow: 0 15px 10px black;
    background: black;
    
}
.back::before {
    filter: blur(3.5rem);
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    box-sizing: 100% 100%;
    background: linear-gradient(var(--C-1), var(--C-2));
    animation: animate 4s linear infinite;
    transform: rotateY(180deg);
    
}
.front, .back {
    transition: all 500ms linear;
    
}

.front {
    display: grid;
    grid-template-rows: repeat(4, 1fr);
    /* background:burlywood; */
    background-image: url(../images/wood_back3.jpg);
    background-size: 100% 50%;
    z-index: 1;
    box-shadow: 0 15px 10px black;
    border-radius: 5%;
    padding-bottom: 10%;
    
}
.back::after {
    z-index: -1;
    content: "";
    position: absolute; 
    inset: 8px;
    background: darkolivegreen;
    border-radius: 5%;
}

.dealerHand {
    
    z-index: 7;
    display: grid;
    /* grid-template-columns: repeat(4, 1fr); */
    grid-template-columns: repeat(1, 1fr);
    gap: 2px;
    /*border: 1px solid red;*/
    padding: 2%;
    margin: 2%;
}
.myHand {
    
    display: grid;
    /* grid-template-columns: repeat(4, 1fr); */
    grid-template-columns: repeat(1, 1fr);
    gap: 1px;
    /* border: 1px solid blue; */
    padding: 2%;
    margin: 2%;
   
}


.button-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);

}
.button-container button {
    border-radius: 25%;
    padding: 2%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    /* animation: fadeIn 1000ms; */
}
.chip-container {
    display: grid;
    gap: 4%;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
}
.chip-container button {
    justify-self: center;
    border-radius: 50%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
.make-bet {
    position: absolute;
    width: 75px;

    left: 0;
    right: 0;
    bottom: 4%;

    margin: 0 auto;
    margin-top: 2%;
    padding: 3%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    background:darkred;
    color: white;
    border-radius: 20%;
    border-color: white;
    /*box-shadow: 0 4px 4px black;*/
}

.make-bet:hover,
.make-bet:active {
    color: white;
    background: crimson;
}

.balance-amount {
    justify-self: center;
    color:dimgray;
    background: ghostwhite;
    border-radius: 8%;
    border: 4px solid silver;
    padding: 4px 50px 2px 50px;
}
p {
    color: ghostwhite;
    justify-self: center;
    font-weight:bolder;
    font-style: oblique;
    font-size: larger;
    align-self: center;
    font-family:monospace;

}
.flipped {
    transform: rotateY(180deg)rotateX(-40deg);
    
}

.flipped .front {
    box-shadow: 0 0 0 #aaa;
}

.flipped .back {
    box-shadow: 5px 5px 5px #aaa;
}

.replay {
    
    width: 75px;

    left: 0;
    right: 0;
    bottom: 4%;

    margin: 0 auto;
    padding: 1% 2% 1% 2%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    background:goldenrod;
    color: white;
    border-radius: 20%;
    border-color: white;
}

.replay:hover,
.replay:active {
    color: white;
    background:yellow;
}

.leave {
    
    width: 80px;

    left: 0;
    right: 0;
    bottom: 4%;

    margin: 0 auto;
    padding: 1% 2% 1% 2%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    background:goldenrod;
    color: white;
    border-radius: 20%;
    border-color: white;
}
.dont-worry-about-what-this-is {
    width: 80px;

    left: 0;
    right: 0;
    bottom: 4%;

    margin: 0 auto;
    padding: 1% 2% 1% 2%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    background:darkolivegreen;
    color: darkolivegreen;
    border-radius: 20%;
    border-style: none;
}
.final-buttons {
    display: flex;
}
.final-buttons button{
    justify-content: space-between;
    margin-top: 2%;
    
}
.little-helper{
    display: flex;
    position: relative;
    
}
.little-helper img{
    position: absolute;
    right: 5px;
    bottom: 0;
    width: 95px;
    max-width: 95px;
    animation: fade-slideLeft 2000ms;
}

.dealerHand div {
    justify-self: center;
    
}
.myHand div {
    justify-self: center;
   
}

.dealerHand img {
    height: 75px;
    width: 55px;
    
}
.myHand img {
    height: 75px;
    width: 55px;
   
}



.table img {
    /* animation: fadeIn 1000ms; */
    animation: fade-slideLeftandDown 1300ms;
}
.bet-1 {
    width: 75px;
    height: 75px;
    /* background: white; */
    background-image: url("../images/gre.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
    /* border-color: white; */
    
}
.bet-5 {
    width: 75px;
    height: 75px;
    /* background: white; */
    background-image: url("../images/red.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
    /* border-color: white; */
}
.bet-10 {
    width: 75px;
    height: 75px;
    /* background: white; */
    background-image: url("../images/bla.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
    /* border-color: white; */
}
.bet-20 {
    width: 75px;
    height: 75px;
    /* background: white; */
    background-image: url("../images/blu.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    color: white;
    /* border-color: white; */
}

.me-score-container {
    padding: 1% 2% 1% 2%;
    z-index: 2;
    background: black;
    color: green;
    border: 2px solid green;
    border-radius: 8%;
    display: grid;
    align-self: self-start;
    animation: fade-slideDown 1000ms;
}
.not-me-score-container {
    padding: 1% 2% 1% 2%;
    z-index: 2;
    background: black;
    color: red;
    border: 2px solid red;
    border-radius: 8%;
    display: grid;
    align-self: self-start;
    animation: fade-slideDown 1000ms;
}

.chat-window {
    /* display: none; */
    position: absolute;
    right: 150px;
    bottom: 0;
    width: 200px;
    max-width: 100px;
    color: white;

}

.exit-game {
    position: absolute;
    top:0;
    left: 5px;
    width: 55px;
    height: 35px;
    background: darkred;
    color: white;
    border: 2px solid white;
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    border-radius: 8%;
}

#double {
    box-shadow: 0 0 0 #aaa;
}

@keyframes fadeIn {
    0% {opacity: 0;}
    100% {opacity: 1;}
}

@keyframes animate {
    0% { transform: rotate(0deg);}
    100% { transform: rotate(360deg);}
}

@keyframes fade-slideDown {
    0% {opacity: 0;
        transform: translateY(-50px) scale(0.9);}
    100% {opacity: 1;
        transform: translateY(0px) scale(1);}

}

@keyframes fade-slideLeftandDown {
    0% {opacity: 0;
        transform: translateX(50px) translateY(-50px) scale(0.9);}
    100% {opacity: 1;
        transform: translateX(0px) translateY(0px) scale(1);}

}
@keyframes fade-slideLeft {
    0% {opacity: 0;
        transform: translateX(50px)  scale(0.9);}
    100% {opacity: 1;
        transform: translateX(0px)  scale(1);}

}

